[MOD] 글자 크기 sp -> dp로 변경

--- a/app/src/main/res/layout/activity_apply.xml
+++ b/app/src/main/res/layout/activity_apply.xml
@@ -12,10 +12,10 @@
         android:layout_height="58dp"
         android:fontFamily="@font/spoqa_han_sans_neo_bold"
         android:gravity="center_vertical"
-        android:lineSpacingExtra="14sp"
+        android:lineSpacingExtra="14dp"
         android:text="@string/apply"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
