--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,10 +33,10 @@
             android:layout_height="58dp"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:gravity="center_vertical"
-            android:lineSpacingExtra="14sp"
+            android:lineSpacingExtra="14dp"
             android:text="이메일로 로그인"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
                 android:inputType="textEmailAddress"
                 android:text="@={viewModel.loginEmail}"
                 android:textColor="@color/gray06"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -96,7 +96,7 @@
                 android:paddingStart="16dp"
                 android:text="@={viewModel.loginPw}"
                 android:textColor="@color/gray06"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintEnd_toEndOf="@+id/et_email"
                 app:layout_constraintStart_toStartOf="@+id/et_email"
                 app:layout_constraintTop_toBottomOf="@+id/et_email" />
@@ -123,7 +123,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
                 android:text="@string/login"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="@+id/et_pw"
                 app:layout_constraintStart_toStartOf="@+id/et_pw"
@@ -137,7 +137,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
                 android:text="@string/login_register"
                 android:textColor="@color/gray05"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -153,7 +153,7 @@
                 android:text="@string/login_question"
                 android:textAlignment="textEnd"
                 android:textColor="@color/gray05"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="normal"
                 app:layout_constraintEnd_toStartOf="@+id/tv_register"
                 app:layout_constraintHorizontal_bias="0.5"
