--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -60,10 +60,10 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/spoqa_han_sans_neo_bold"
                         android:textStyle="bold"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="@color/orange"
                         android:letterSpacing="-0.01"
-                        android:lineSpacingExtra="18sp"
+                        android:lineSpacingExtra="18dp"
                         android:text="@string/receive_top_msg"
                         android:layout_marginTop="28dp"
                         android:layout_marginStart="16dp"
@@ -75,10 +75,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                        android:textSize="28sp"
+                        android:textSize="28dp"
                         android:textColor="@color/gray06"
                         android:letterSpacing="-0.01"
-                        android:lineSpacingExtra="8sp"
+                        android:lineSpacingExtra="8dp"
                         android:text="@{viewModel.receiveInvitationData.invitation.host.username}"
                         tools:text="김준희"
                         android:layout_marginStart="16dp"
@@ -90,10 +90,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                        android:textSize="24sp"
+                        android:textSize="24dp"
                         android:textColor="@color/gray06"
                         android:letterSpacing="-0.01"
-                        android:lineSpacingExtra="8sp"
+                        android:lineSpacingExtra="8dp"
                         android:text="@string/receive_top_who_msg"
                         android:layout_marginStart="1dp"
                         app:layout_constraintBottom_toBottomOf="@id/tv_recieve_top_dear1"
@@ -144,10 +144,10 @@
                             app:layout_constraintStart_toStartOf="@id/cl_recieve_letter"
                             app:layout_constraintEnd_toEndOf="@id/cl_recieve_letter"
                             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                            android:textSize="14sp"
+                            android:textSize="14dp"
                             android:textColor="@color/gray06"
                             android:letterSpacing="-0.01"
-                            android:lineSpacingExtra="18sp"
+                            android:lineSpacingExtra="18dp"
                             android:text ="@{viewModel.receiveInvitationData.invitation.invitationTitle}"
                             tools:text="가나다라마바사아자차가나다라마바사아자차"/>
 
@@ -169,10 +169,10 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                                android:textSize="14sp"
+                                android:textSize="14dp"
                                 android:textColor="@color/gray06"
                                 android:letterSpacing="-0.01"
-                                android:lineSpacingExtra="10sp"
+                                android:lineSpacingExtra="10dp"
                                 android:text="@{viewModel.receiveInvitationData.invitation.invitationDesc}"
                                 tools:text="야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들"/>
 
@@ -196,10 +196,10 @@
                             android:text="@string/receive_together_msg"
                             android:fontFamily="@font/spoqa_han_sans_neo_medium"
                             android:textStyle="normal"
-                            android:textSize="16sp"
+                            android:textSize="16dp"
                             android:textColor="#1c1c1c"
                             android:letterSpacing="-0.01"
-                            android:lineSpacingExtra="14sp"
+                            android:lineSpacingExtra="14dp"
                             android:layout_marginStart="16dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"/>
@@ -244,7 +244,7 @@
                             app:setPinkBoldText="@{@string/receive_choice_msg_bold}"
                             tools:text="@string/receive_choice_msg"
                             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                            android:textSize="20sp"
+                            android:textSize="20dp"
                             android:textColor="@color/gray06"
                             android:letterSpacing="-0.01"/>
 
@@ -290,7 +290,7 @@
                             android:layout_marginTop="16dp"
                             tools:text="21.12.03"
                             android:fontFamily="@font/din_pro_bold"
-                            android:textSize="20sp"
+                            android:textSize="20dp"
                             android:textColor="@color/black"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -305,6 +305,7 @@
                             android:layout_marginBottom="0dp"
                             android:text="@string/receive_choose_msg"
                             android:textColor="@color/gray04"
+                            android:textSize="20dp"
                             android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -340,7 +341,7 @@
                             android:id="@+id/btn_receive_no"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
+                            android:textSize="16dp"
                             android:background="@drawable/rectangle_gray04_10"
                             android:paddingStart="60dp"
                             android:paddingEnd="60dp"
@@ -367,7 +368,7 @@
                             android:paddingTop="13dp"
                             android:paddingBottom="13dp"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
+                            android:textSize="16dp"
                             app:layout_constraintBottom_toBottomOf="@id/btn_receive_no"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_chainStyle="spread"
