--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -62,7 +62,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                        android:textSize="24sp"
+                        android:textSize="24dp"
                         android:textColor="@color/gray06"
                         android:letterSpacing="-0.01"
                         app:setWordBoldAllText="@{@string/send_top_msg}"
@@ -93,7 +93,7 @@
                         tools:text="2/3"
                         app:setSendGuestListForCnt="@{viewModel.sendInvitationData.guests}"
                         android:fontFamily="@font/din_pro_regular"
-                        android:textSize="30sp"
+                        android:textSize="30dp"
                         android:textColor="@color/gray06"
                         android:letterSpacing="-0.01"
                         android:gravity="end"/>
@@ -122,7 +122,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginTop="5dp"
                     android:text="@string/send_reject"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray04"
                     android:fontFamily="@font/din_pro_bold" />
 
@@ -136,7 +136,7 @@
                     android:layout_marginTop="6dp"
                     android:textColor="@color/gray06"
                     android:fontFamily="@font/din_pro_bold"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:text="@{viewModel.sendInvitationRejects.toString() }"
                     tools:text="김차차 이당당 박뫄뫄 "/>
@@ -157,7 +157,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="@color/gray06"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>
@@ -188,7 +188,7 @@
                         android:layout_marginEnd="13dp"
                         android:fontFamily="@font/spoqa_han_sans_neo_bold"
                         android:textStyle="bold"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="@color/gray06"
                         android:letterSpacing="-0.01"
                         android:text="@{viewModel.sendInvitationData.invitationTitle}"
@@ -221,12 +221,12 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             android:gravity="start"
                             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                            android:textSize="14sp"
+                            android:textSize="14dp"
                             android:textColor="@color/gray06"
                             android:letterSpacing="-0.01"
                             android:layout_marginEnd="20dp"
                             android:layout_marginStart="25dp"
-                            android:lineSpacingExtra="10sp"
+                            android:lineSpacingExtra="10dp"
                             android:text="@{viewModel.sendInvitationData.invitationDesc}"
                             tools:text="야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들
 야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들"/>
@@ -247,7 +247,7 @@
                         android:id="@+id/btn_send_cancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:background="@drawable/rectangle_gray04_10"
                         android:paddingStart="63dp"
                         android:paddingEnd="63dp"
@@ -273,7 +273,7 @@
                         android:paddingTop="14dp"
                         android:paddingBottom="14dp"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:enabled="false"
                         android:layout_margin="2dp"
                         app:layout_constraintBottom_toBottomOf="@id/btn_send_cancel"
