--- a/app/src/main/res/layout/dialog_noti_delete_dialog.xml
+++ b/app/src/main/res/layout/dialog_noti_delete_dialog.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:text="@string/noti_delete"
@@ -59,7 +59,7 @@
                     android:letterSpacing="-0.01"
                     android:text="@string/noti_delete_content"
                     android:textColor="@color/gray05"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
@@ -102,7 +102,7 @@
                     android:paddingBottom="14dp"
                     android:text="삭제"
                     android:textColor="@color/pink01"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
