--- a/app/src/main/res/layout/dialog_receive_yes_diaglo.xml
+++ b/app/src/main/res/layout/dialog_receive_yes_diaglo.xml
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:text="담은 목록"
@@ -55,7 +55,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_bold"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         tools:text="2021.12.23"
@@ -66,7 +66,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_regular"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         android:gravity="end"
@@ -82,7 +82,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_bold"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         tools:text="2021.12.23"
@@ -94,7 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_regular"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         android:gravity="end"
@@ -110,7 +110,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_bold"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         tools:text="2021.12.23"
@@ -122,7 +122,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_regular"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         android:gravity="end"
@@ -138,7 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_bold"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         tools:text="2021.12.23"
@@ -150,7 +150,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/din_pro_regular"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         android:textColor="#000000"
                         android:letterSpacing="-0.01"
                         android:gravity="end"
@@ -186,7 +186,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray05"
                     android:letterSpacing="-0.01"
                     android:text="이렇게 보낼까요?"
@@ -201,7 +201,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
@@ -222,7 +222,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/pink01"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
