--- a/app/src/main/res/layout/dialog_send_confirm.xml
+++ b/app/src/main/res/layout/dialog_send_confirm.xml
@@ -33,7 +33,7 @@
                     android:letterSpacing="-0.01"
                     android:text="@string/send_confirm_msg"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,7 +61,7 @@
                         android:fontFamily="@font/din_pro_bold"
                         android:letterSpacing="-0.01"
                         android:textColor="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -79,7 +79,7 @@
                         android:gravity="end"
                         android:letterSpacing="-0.01"
                         android:textColor="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray05"
                     android:letterSpacing="-0.01"
                     android:text="@string/send_dialog_check1"
@@ -129,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray05"
                     android:letterSpacing="-0.01"
                     android:text="@string/send_dialog_check3"
@@ -144,7 +144,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
@@ -163,7 +163,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/pink01"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
