--- a/app/src/main/res/layout/fragment_dialog_logout.xml
+++ b/app/src/main/res/layout/fragment_dialog_logout.xml
@@ -31,7 +31,7 @@
                     android:letterSpacing="-0.01"
                     android:text="로그아웃"
                     android:textColor="@color/gray06"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +60,7 @@
                     android:text="정말 로그아웃 하시겠어요?"
                     android:textAlignment="center"
                     android:textColor="@color/gray05"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
                     android:paddingBottom="14dp"
                     android:text="네"
                     android:textColor="@color/gray06"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btn_logout_no"
@@ -103,7 +103,7 @@
                     android:paddingBottom="14dp"
                     android:text="아니요"
                     android:textColor="@color/pink01"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
