--- a/app/src/main/res/layout/fragment_dialog_resign.xml
+++ b/app/src/main/res/layout/fragment_dialog_resign.xml
@@ -31,7 +31,7 @@
                     android:letterSpacing="-0.01"
                     android:text="회원 탈퇴"
                     android:textColor="@color/gray06"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -59,7 +59,7 @@
                     android:letterSpacing="-0.01"
                     android:text="저장된 모든 정보가\n삭제되며 복구가 불가능합니다.\n진행하시겠어요?"
                     android:textColor="@color/gray05"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
                     android:paddingBottom="14dp"
                     android:text="탈퇴"
                     android:textColor="@color/gray06"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btn_resign_no"
@@ -102,7 +102,7 @@
                     android:paddingBottom="14dp"
                     android:text="다음에"
                     android:textColor="@color/pink01"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
