--- a/app/src/main/res/layout/item_picker_event.xml
+++ b/app/src/main/res/layout/item_picker_event.xml
@@ -32,7 +32,7 @@
             android:fontFamily="@font/din_pro_medium"
             android:text="@{invitationPlan.start}"
             android:textColor="@color/gray06"
-            android:textSize="18sp"
+            android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_dot"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +45,7 @@
             android:fontFamily="@font/din_pro_medium"
             android:text=" - "
             android:textColor="@color/gray06"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_start_time"
@@ -58,7 +58,7 @@
             android:text="@{invitationPlan.end}"
             android:fontFamily="@font/din_pro_medium"
             android:textColor="@color/gray06"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_symbol"
@@ -73,7 +73,7 @@
             android:text="|"
             android:layout_marginLeft="14dp"
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_end_time"
@@ -87,7 +87,7 @@
             android:layout_marginLeft="14dp"
             android:text="@{invitationPlan.invitationTitle}"
             android:textColor="@color/gray06"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_bar"
