--- a/app/src/main/res/layout/item_receive_schedule.xml
+++ b/app/src/main/res/layout/item_receive_schedule.xml
@@ -41,7 +41,7 @@
             android:text="@{planResponseData.invitationTitle}"
             tools:text="대방어데이"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#1c1c1c"
             android:letterSpacing="-0.01"
             android:ems="7"
@@ -77,7 +77,7 @@
             android:textColor="@color/gray06"
             android:fontFamily="@font/din_pro_regular"
             android:textStyle="normal"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:letterSpacing="-0.01"
             app:layout_constraintEnd_toEndOf="@id/iv_receive_schedule_bg"
             app:layout_constraintStart_toEndOf="@id/iv_receive_schedule_bar"
