--- a/app/src/main/res/layout/item_receive_schedule_gray.xml
+++ b/app/src/main/res/layout/item_receive_schedule_gray.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="대방어데이"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#1c1c1c"
             android:letterSpacing="-0.01"
             android:gravity="center_horizontal"
@@ -54,7 +54,7 @@
             android:layout_marginTop="12dp"
             android:text="오전 10 : 00 ~ 오후 13 : 00"
             android:layout_marginStart="16dp"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="@color/gray06"
             android:textAlignment="center"
             android:letterSpacing="-0.08"
