--- a/app/src/main/res/layout/item_selected_date.xml
+++ b/app/src/main/res/layout/item_selected_date.xml
@@ -137,7 +137,7 @@
                 android:fontFamily="@font/din_pro_regular"
                 android:text="@{startEndDate.date}"
                 android:textColor="@color/gray06"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -150,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/din_pro_regular"
                 android:textColor="@color/gray06"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_hyphen"
@@ -164,7 +164,7 @@
                 android:fontFamily="@font/din_pro_regular"
                 android:text=" - "
                 android:textColor="@color/gray06"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_end_time"
@@ -177,7 +177,7 @@
                 android:layout_marginRight="36dp"
                 android:fontFamily="@font/din_pro_regular"
                 android:textColor="@color/gray06"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
