--- a/app/src/main/res/layout/activity_change_pw.xml
+++ b/app/src/main/res/layout/activity_change_pw.xml
@@ -52,7 +52,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="새 비밀번호"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,6 +66,7 @@
                 android:ems="10"
                 android:inputType="textPassword"
                 android:maxLength="16"
+                android:textSize="16dp"
                 android:text="@={changePWviewModel.newPW}"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_newpw"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,8 +92,8 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:text="@={changePWviewModel.tvWarningPW}"
                 android:textColor="@color/pink01"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="@+id/et_newpw"
+                android:textSize="12dp"
+                app:layout_constraintStart_toStartOf="@+id/et_newpw"
                 app:layout_constraintTop_toBottomOf="@+id/et_newpw" />
 
             <TextView
@@ -103,7 +104,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="비밀번호 확인"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/tv_newpw"
                 app:layout_constraintTop_toBottomOf="@+id/tv_newpw" />
 
@@ -113,6 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="-7dp"
+                android:textSize="16dp"
                 android:ems="10"
                 android:inputType="textPassword"
                 android:maxLength="16"
@@ -142,7 +144,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:text="@={changePWviewModel.tvWarningCheckPW}"
                 android:textColor="@color/pink01"
-                android:textSize="12sp"
+                android:textSize="12dp"
                 app:layout_constraintStart_toStartOf="@+id/et_check_pw"
                 app:layout_constraintTop_toBottomOf="@+id/et_check_pw" />
 
@@ -156,7 +158,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:text="저장"
                 android:textColor="@color/gray06"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_pw_warning" />
 
