--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -33,7 +33,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/friend_friend"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +62,7 @@
                 android:maxLines="1"
                 android:paddingVertical="16dp"
                 android:paddingStart="46dp"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_friend" />
@@ -116,6 +116,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:text="@string/friend_null"
                 android:textAlignment="center"
+                android:textSize="16dp"
                 android:textColor="@color/gray05"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/iv_friend_null"
