--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -49,7 +49,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/login_main_email_register"
             android:textColor="@color/gray04"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -64,7 +64,7 @@
             android:layout_marginEnd="16dp"
             android:text="|"
             android:textColor="@color/gray02"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@+id/tv_email_register"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tv_email_login"
@@ -78,7 +78,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/login_main_email_login_underline"
             android:textColor="@color/gray04"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toStartOf="@+id/tv_line"
             app:layout_constraintHorizontal_bias="0.5"
@@ -95,7 +95,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info1"
             android:textColor="@color/gray05"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info2"
@@ -110,7 +110,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info2"
             android:textColor="@color/gray05"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info3"
             app:layout_constraintHorizontal_bias="0.5"
@@ -124,7 +124,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info3"
             android:textColor="@color/gray05"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info4"
             app:layout_constraintHorizontal_bias="0.5"
@@ -138,7 +138,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info4"
             android:textColor="@color/gray05"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info5"
             app:layout_constraintHorizontal_bias="0.5"
@@ -153,7 +153,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info5"
             android:textColor="@color/gray05"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
