--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -29,7 +29,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:text="@string/noti_title"
             android:textColor="@color/gray06"
-            android:textSize="18sp"
+            android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +51,7 @@
         app:tabIndicatorHeight="3dp"
         app:tabRippleColor="@null"
         app:tabSelectedTextColor="@color/black"
+        app:tabTextAppearance="@style/tab_text"
         app:tabTextColor="@color/black" />
 
     <androidx.viewpager2.widget.ViewPager2
