--- a/app/src/main/res/layout/dialog_apply_back.xml
+++ b/app/src/main/res/layout/dialog_apply_back.xml
@@ -33,7 +33,7 @@
                     android:letterSpacing="-0.01"
                     android:text="신청 취소"
                     android:textColor="@color/gray06"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -61,7 +61,7 @@
                     android:letterSpacing="-0.01"
                     android:text="작성 중인 내용이 있어요.\n여기서 나갈까요?"
                     android:textColor="@color/gray05"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
                     android:paddingBottom="14dp"
                     android:text="나가기"
                     android:textColor="@color/gray06"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btn_apply_dia_continue"
@@ -103,7 +103,7 @@
                     android:paddingBottom="14dp"
                     android:text="계속"
                     android:textColor="@color/pink01"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
