--- a/app/src/main/res/layout/dialog_detail_dialog.xml
+++ b/app/src/main/res/layout/dialog_detail_dialog.xml
@@ -27,7 +27,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:text="약속 삭제"
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_bold"
                     android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray05"
                     android:letterSpacing="-0.01"
                     android:text="약속을 삭제하시겠어요?"
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:textStyle="normal"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/pink01"
                     android:letterSpacing="-0.01"
                     android:gravity="center_horizontal"
