--- a/app/src/main/res/layout/dialog_home_no_login.xml
+++ b/app/src/main/res/layout/dialog_home_no_login.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <data>
 
 </data>
 <FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.home.DialogHomeNoLoginFragment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -27,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:textColor="@color/gray06"
                 android:letterSpacing="-0.01"
                 android:text="로그인"
@@ -55,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
                 android:textStyle="normal"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textColor="@color/gray05"
                 android:letterSpacing="-0.01"
                 android:text="로그인이 필요한 서비스예요.\n로그인하러 갈까요?"
@@ -70,44 +69,41 @@
                 android:id="@+id/btn_home_nologin_dialog_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                android:textStyle="normal"
-                android:textSize="16sp"
-                android:textColor="@color/gray06"
-                android:letterSpacing="-0.01"
-                android:gravity="center_horizontal"
+                android:layout_marginTop="18dp"
                 android:layout_marginBottom="6dp"
-                android:paddingBottom="14dp"
-                android:paddingEnd="10dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_medium"
+                android:gravity="center_horizontal"
+                android:letterSpacing="-0.01"
                 android:paddingStart="14dp"
                 android:paddingTop="14dp"
-                android:layout_marginTop="18dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="14dp"
                 android:text="아니요"
-                app:layout_constraintTop_toBottomOf="@id/tv_receive_reject"
+                android:textColor="@color/gray06"
+                android:textSize="16dp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn_home_nologin_dialog_login"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_nologin_msg" />
 
             <TextView
                 android:id="@+id/btn_home_nologin_dialog_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                android:textStyle="normal"
-                android:textSize="16sp"
-                android:textColor="@color/pink01"
-                android:letterSpacing="-0.01"
                 android:gravity="center_horizontal"
-                android:paddingBottom="14dp"
-                android:paddingEnd="25dp"
+                android:letterSpacing="-0.01"
                 android:paddingStart="20dp"
                 android:paddingTop="14dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginStart="4dp"
+                android:paddingEnd="25dp"
+                android:paddingBottom="14dp"
                 android:text="로그인"
-                android:layout_marginTop="18dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_receive_reject"
+                android:textColor="@color/pink01"
+                android:textSize="16dp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_home_nologin_dialog_cancel"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="@+id/btn_home_nologin_dialog_cancel" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
