--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/din_pro_bold"
                     android:textColor="@color/pink"
-                    android:textSize="22sp"
+                    android:textSize="22dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="2022년 2월" />
@@ -48,7 +48,7 @@
                     android:layout_marginLeft="10dp"
                     android:fontFamily="@font/din_pro_bold"
                     android:textColor="@color/pink"
-                    android:textSize="22sp"
+                    android:textSize="22dp"
                     app:layout_constraintStart_toEndOf="@+id/tv_current_year"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="1월" />
@@ -96,7 +96,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:textAllCaps="true"
                 android:textColor="@color/gray06"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="1월 14일 목요일" />
 
@@ -118,7 +118,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:text="일정이없어요!"
+                android:text="일정이 없어요!"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
