--- a/app/src/main/res/layout/fragment_dialog_goto_my_page.xml
+++ b/app/src/main/res/layout/fragment_dialog_goto_my_page.xml
@@ -33,7 +33,7 @@
                     android:letterSpacing="-0.01"
                     android:text="회원가입"
                     android:textColor="@color/gray06"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -61,7 +61,7 @@
                     android:letterSpacing="-0.01"
                     android:text="아직 회원가입을 완료하지 않았어요\n씨밋에서 사용할 이름과 아이디를\n입력해주세요"
                     android:textColor="@color/gray05"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
                     android:paddingBottom="14dp"
                     android:text="확인"
                     android:textColor="@color/pink01"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
