--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,7 +92,7 @@
                     <TextView
                         android:id="@+id/tv_home_msg"
                         android:textColor="@color/gray06"
-                        android:lineSpacingExtra="2sp"
+                        android:lineSpacingExtra="2dp"
                         android:letterSpacing="-0.06"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
                         android:fontFamily="@font/spoqa_han_sans_neo_medium"
                         android:gravity="start"
                         android:maxLines="2"
-                        android:textSize="22sp"
+                        android:textSize="22dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:setHomeBannerText="@{viewModel.homeBanner}"
@@ -143,7 +143,7 @@
                     android:text="@string/home_reminder_coming"
                     android:fontFamily="@font/spoqa_han_sans_neo_bold"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="20dp"
                     app:layout_constraintBottom_toTopOf="@id/rv_home_reminder"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -182,7 +182,7 @@
                         android:text="@string/home_reminder_no"
                         android:fontFamily="@font/spoqa_han_sans_neo_regular"
                         android:textStyle="normal"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:textColor="@color/gray04"
                         android:letterSpacing="-0.01"/>
 
