--- a/app/src/main/res/layout/fragment_second_apply.xml
+++ b/app/src/main/res/layout/fragment_second_apply.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/din_pro_bold"
             android:textColor="@color/pink"
-            android:textSize="22sp"
+            android:textSize="22dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="2019년" />
@@ -29,7 +29,7 @@
             android:layout_marginLeft="10dp"
             android:fontFamily="@font/din_pro_bold"
             android:textColor="@color/pink"
-            android:textSize="22sp"
+            android:textSize="22dp"
             app:layout_constraintStart_toEndOf="@+id/tv_current_year"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1월" />
@@ -58,7 +58,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:textAllCaps="true"
             android:textColor="@color/gray06"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintTop_toBottomOf="@+id/calendar"
             tools:text="1월 14일 목요일" />
 
