--- a/app/src/main/res/layout/item_apply_search_friend.xml
+++ b/app/src/main/res/layout/item_apply_search_friend.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="18dp"
         android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:textColor="#1c1c1c"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="@+id/iv_apply_profile"
         app:layout_constraintStart_toEndOf="@+id/iv_apply_profile"
