--- a/app/src/main/res/layout/item_calendar_date.xml
+++ b/app/src/main/res/layout/item_calendar_date.xml
@@ -12,10 +12,10 @@
         android:layout_height="match_parent"
         android:layout_margin="8dp"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:gravity="center"
         android:letterSpacing="-0.01"
-        android:lineSpacingExtra="16sp"
+        android:lineSpacingExtra="16dp"
         android:fontFamily="@font/din_pro_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
