--- a/app/src/main/res/layout/item_calendar_event.xml
+++ b/app/src/main/res/layout/item_calendar_event.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textStyle="bold"
                 android:letterSpacing="0.01"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
@@ -56,7 +56,7 @@
             android:fontFamily="@font/din_pro_regular"
             android:letterSpacing="0.01"
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="normal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_title" />
@@ -70,7 +70,7 @@
             android:letterSpacing="0.01"
             android:text=" - "
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/tv_start_time"
             app:layout_constraintTop_toBottomOf="@+id/layout_title" />
@@ -83,7 +83,7 @@
             android:fontFamily="@font/din_pro_regular"
             android:letterSpacing="0.01"
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/tv_symbol"
             app:layout_constraintTop_toBottomOf="@+id/layout_title"/>
