--- a/app/src/main/res/layout/item_picker_date.xml
+++ b/app/src/main/res/layout/item_picker_date.xml
@@ -23,7 +23,7 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:gravity="center"
-            android:textSize="13sp"
+            android:textSize="13dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_date"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Mon" />
@@ -35,7 +35,7 @@
             android:layout_marginBottom="12dp"
             android:fontFamily="@font/din_pro_bold"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_day"
             tools:text="24" />
