--- a/app/src/main/res/layout/toast_custom.xml
+++ b/app/src/main/res/layout/toast_custom.xml
@@ -23,7 +23,7 @@
                 android:layout_marginEnd="20dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:textColor="#ffffff"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
