--- a/app/src/main/res/layout/view_mypage.xml
+++ b/app/src/main/res/layout/view_mypage.xml
@@ -65,7 +65,7 @@
                         android:fontFamily="@font/spoqa_han_sans_neo_bold"
                         android:text="@string/login"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="20dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -88,7 +88,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:text="@string/mypage_login_msg"
                     android:textColor="@color/white"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cl_mypage_login" />
@@ -113,7 +113,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:text="@string/mypage_notice"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -137,7 +137,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:text="@string/mypage_push"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider1" />
 
@@ -174,7 +174,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:text="@string/mypage_terms_of_use"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
@@ -187,7 +187,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:text="@string/mypage_privacy_policy"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_mypage_terms_of_use" />
 
@@ -201,7 +201,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:text="@string/mypage_open_source"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_mypage_privacy_policy" />
